-----

0.2.4    TO BE RELEASED
   [Added]
       * Accessors for name, UUID, MAC, etc
       * Code examples at the top of the CONSTANTS sections
   [Fixed]
       * Process connections ('*+ext://' URI) don't pick up the 'command'
         query parameter

0.2.3    2026-01-06
   [Fixed]
       * Remove v5.32+ specific syntax

0.2.2    2026-01-06
   [Changed]
       * Version of XDR::Parse used to generate output upgraded to 1.0.1
   [Fixed]
       * Removed stale IO::Async::* dependencies
       * Kwalitee and Pod::Coverage failures

0.2.1    2026-01-04
   [Fixed]
       * Writes of data frames bigger than 8192 bytes as is likely the case
         when using upload streams
       * Versions in Protocol::Sys::Virt 'use' statements list
         Sys::Virt::Async version numbers (instead of dependency versions)


0.2.0    2026-01-02
   [Breaking]
       * Migrated from IO::Async to Future::IO
   [Changed]
       * SSH connections implemented as specialization of Process connections
   [Fixed]
       * 'readonly' flag not passed to remote SSH helper (-r option)
       * Undefined value warnings during event callback registration
       * Errors during cleanup calls on cleaned up callbacks
       * Experimental warnings on inherited fields in Connection classes
       * Typo preventing correct instantiation of StorageVol classes

0.1.10   2025-12-02
   [Changed]
       * Updated libvirt to v11.10.0 (from v11.9.0)
   [Added]
       * Constants STATS_BLOCK_SUFFIX_LIMITS_*,
         STATS_BLOCK_SUFFIX_TIMED_GROUP_*, EVENT_SUSPENDED_GUEST_SHUTDOWN,
         BACKUP_BEGIN_PRESERVE_SHUTDOWN_DOMAIN

0.1.9    2025-11-23
   [Fixed]
       * SSH URL query parameter handling ignores 'keyfile',
         'no_tty', 'mode' and 'command' parameters

0.1.8    2025-11-07
   [Changed]
       * Updated libvirt to v11.9.0 (from v11.8.0)
       * No actual changes

0.1.7    2025-10-13
   [Fixed]
       * MANIFEST now lists the new examples

0.1.6    2025-10-12
   [Added]
       * Examples: