@@ -42,6 +42,10 @@ use constant {
 field $_id :param :reader;
 field $_client :param :reader;
 
+method domain() {
+    return $_client->_domain_instance( $_id->{dom} );
+}
+
 method name() {
     return $_id->{name};
 }
@@ -109,6 +113,12 @@ No (LibVirt) events available for domain checkpoints.
 Not to be called directly. Various APIs return instances of this type.
 
 =head1 METHODS
+
+=head2 domain
+
+  my $dom = $checkpoint->domain;
+
+Returns the L<Sys::Async::Virt::Domain> instance this is a checkpoint of.
 
 =head2 name
 
