@@ -29,6 +29,10 @@ __CONSTANTS__
 field $_id :param :reader;
 field $_client :param :reader;
 
+method network() {
+    return $_client->_domain_network_instance( $_id->{net} );
+}
+
 method uuid() {
     return $_id->{uuid};
 }
@@ -65,6 +69,12 @@ __VERSION__
 =head2 new
 
 =head1 METHODS
+
+=head2 network
+
+  $net = $port->network;
+
+Returns the L<Sys::Async::Virt::Network> instance which this port is part of.
 
 =head2 uuid
 
