@@ -33,6 +33,9 @@ method name() {
     return $_id->{name};
 }
 
+method port() {
+    return $_client->_network_port_instance( $_id->{portdev} );
+}
 
 __CALLS__
 
@@ -66,6 +69,12 @@ __VERSION__
   $name = $binding->name;
 
 Returns the name of the filter binding.
+
+=head2 port
+
+  $port = $binding->port;
+
+Returns the L<Sys::Async::Virt::NetworkPort> instance this binding associates with.
 
 __ENTRYPOINTS__
 
