@@ -29,12 +29,16 @@ __CONSTANTS__
 field $_id :param :reader;
 field $_client :param :reader;
 
+method key() {
+    return $_id->{key};
+}
+
 method name() {
     return $_id->{name};
 }
 
-method key() {
-    return $_id->{key};
+method pool() {
+    return $_client->_storage_pool_instance( $_id->{pool} );
 }
 
 __CALLS__
@@ -65,17 +69,23 @@ __VERSION__
 
 =head1 METHODS
 
+=head2 key
+
+  $key = $vol->key;
+
+Returns a globally unique string identifying the storage volume.
+
 =head2 name
 
-  $name = $pool->name;
+  $name = $vol->name;
 
 Returns the name of the storage volume.
 
-=head2 key
+=head2 pool
 
-  $key = $pool->key;
+  $pool = $vol->pool;
 
-Returns a globally unique string identifying the storage volume.
+Returns the L<Sys::Async::Virt::StoragePool> instance this volume belongs to.
 
 __ENTRYPOINTS__
 
