@@ -3,6 +3,8 @@
 0.2.4    TO BE RELEASED
    [Added]
        * Accessors for name, UUID, MAC, etc
+       * Accessors for related intances: 'pool' on volumes, 'domain' on
+         checkpoints and snapshots, 'network' on ports and 'port' on bindings
        * Code examples at the top of the CONSTANTS sections
    [Fixed]
        * Process connections ('*+ext://' URI) don't pick up the 'command'
